--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "dist/lib/index.js",
   "module": "dist/es/index.js",
   "types": "dist/types/index.d.ts",
+  "umd": "dist/umd/viewUI.umd.js",
   "files": [
     "dist"
   ],
@@ -23,6 +24,7 @@
     "dev": "pnpm run --filter ./playground dev",
     "build": "gulp -f ./script/build/index.ts",
     "build:component": "vite build",
+    "build:umd": "vite build --config vite.config.umd.ts",
     "build2": "gulp -f packages/vueView/script/build/index.ts & pnpm run --filter ./packages/utils build",
     "publish": "gulp -f packages/vueView/script/publish/index.ts",
     "publish:utils": "gulp -f packages/utils/publish/index.ts",
@@ -74,6 +76,7 @@
     "typescript": "^4.9.5",
     "unplugin-vue-define-options": "^1.2.1",
     "vite": "^4.1.1",
+    "vite-plugin-css-injected-by-js": "^3.5.1",
     "vite-plugin-dts": "^1.4.1",
     "vitest": "^0.29.2",
     "vue": "^3.2.36"
