--- a/package.json
+++ b/package.json
@@ -25,13 +25,9 @@
     "build": "gulp -f ./script/build/index.ts",
     "build:component": "vite build",
     "build:umd": "vite build --config vite.config.umd.ts",
-    "build2": "gulp -f packages/vueView/script/build/index.ts & pnpm run --filter ./packages/utils build",
-    "publish": "gulp -f packages/vueView/script/publish/index.ts",
-    "publish:utils": "gulp -f packages/utils/publish/index.ts",
-    "docs:dev": "pnpm run --filter site docs:dev",
-    "docs:build": "pnpm run --filter site docs:build",
-    "docs:deploy": "pnpm run --filter site docs:deploy",
-    "clean": "rimraf **/node_modules"
+    "publish": "gulp -f script/publish/index.ts",
+    "docs:dev": "cd docs && vitepress dev",
+    "docs:build": "cd docs && vitepress build"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
@@ -47,6 +43,8 @@
     "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-legacy": "^4.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitepress-demo-preview/component": "^2.3.2",
+    "@vitepress-demo-preview/plugin": "^1.2.3",
     "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.1",
     "c8": "^7.13.0",
@@ -78,6 +76,7 @@
     "vite": "^4.1.1",
     "vite-plugin-css-injected-by-js": "^3.5.1",
     "vite-plugin-dts": "^1.4.1",
+    "vitepress": "^1.3.4",
     "vitest": "^0.29.2",
     "vue": "^3.2.36"
   },
