--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "publish": "gulp -f script/publish/index.ts",
     "docs:dev": "cd docs && vitepress dev",
     "docs:build": "cd docs && vitepress build",
-    "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./src",
-    "lint:style": "stylelint --fix \"src/**/*.{css,less}\""
+    "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --ignore-pattern 'node_modules/*' --fix --quiet .",
+    "lint:style": "stylelint --ignore-pattern 'node_modules/*' --fix \"src/**/*.{css,less}\""
   },
   "peerDependencies": {
     "vue": "^3.0.0"
@@ -62,6 +62,7 @@
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
     "prettier": "^2.8.4",
     "release-it": "^15.6.0",
     "rimraf": "^6.0.1",
