--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   ],
   "lint-staged": {
     "./**/*.{js,jsx,ts,tsx,vue}": [
-      "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
+      "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./"
+    ],
+    "*.{css,less}": [
       "stylelint --fix \"/src/**/*.{css,less}\""
     ]
   },
@@ -37,6 +39,7 @@
     "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --ignore-pattern 'node_modules/*' --fix --quiet .",
     "lint:style": "stylelint --ignore-pattern 'node_modules/*' --fix \"src/**/*.{css,less}\"",
     "lint-staged": "lint-staged",
+    "test": "vitest run",
     "prepare": "husky install"
   },
   "peerDependencies": {
@@ -57,7 +60,6 @@
     "@vitepress-demo-preview/plugin": "^1.2.3",
     "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.1",
-    "c8": "^7.13.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -89,7 +91,7 @@
     "vite-plugin-css-injected-by-js": "^3.5.1",
     "vite-plugin-dts": "^1.4.1",
     "vitepress": "^1.3.4",
-    "vitest": "^0.29.2",
+    "vitest": "^0.29.8",
     "vue": "^3.2.36"
   },
   "license": "ISC"
