feat: update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "./dist",
     "jsx": "preserve",
     "strict": true,
     "target": "ES2015",
