--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint:style": "stylelint --ignore-pattern 'node_modules/*' --fix \"src/**/*.{css,less}\"",
     "lint-staged": "lint-staged",
     "test": "vitest run",
+    "release": "gulp -f ./script/publish/index.ts",
     "prepare": "husky install"
   },
   "peerDependencies": {
@@ -93,6 +94,10 @@
     "vitepress": "^1.3.4",
     "vitest": "^0.29.8",
     "vue": "^3.2.36"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SuYxh/view-ui"
   },
   "license": "ISC"
 }
