--- a/.release-it.json
+++ b/.release-it.json
@@ -3,7 +3,7 @@
     "requireCleanWorkingDir": true,
     "requireUpstream": true,
     "commit": true,
-    "commitMessage": "Release v${version}",
+    "commitMessage": "chore: Release v${version}}",
     "tag": true,
     "tagName": "v${version}",
     "tagAnnotation": "Release v${version}",
